<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="general">General</string>
    <string name="monitor_notifications">Monitor notifications</string>
    <string name="notify_posted">Notify finished posting with toast</string>

    <string name="authorization">Authorization</string>

    <string name="twitter">Twitter</string>
    <string name="mastodon">Mastodon</string>
    <string name="misskey">Misskey</string>
    <string name="account_auth">Authorize account</string>
    <string name="delete_token">Delete authorized token</string>

    <string name="mastodon_privacy">Privacy</string>
    <string name="mastodon_privacy_public">Public</string>
    <string name="mastodon_privacy_unlisted">Unlisted</string>
    <string name="mastodon_privacy_private">Private</string>
    <string name="mastodon_privacy_direct">Direct</string>

    <string name="misskey_privacy">Privacy</string>
    <string name="misskey_privacy_public">Public</string>
    <string name="misskey_privacy_home">Home</string>
    <string name="misskey_privacy_followers">Followers</string>
    <string name="misskey_privacy_specified">Specified</string>
    <string name="misskey_privacy_private">Private</string>

    <string name="mastodon_dialog_title">Instance URL (e.g. mastodon.host)</string>
    <string name="misskey_dialog_title">Instance URL (e.g. misskey.xyz)</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">Cancel</string>

    <string name="posting">Posting</string>
    <string name="edit_template">Edit template of Tweets</string>
    <string name="with_cover">Tweet with album artwork</string>

    <string name="template_default" formatted="false">🎵 %title%\n🎙️ %artist%\n💿 %album%\n🎧 %player%\n#NowPlaying #Auto</string>
    <string name="template_dialog" formatted="false">%title% - Title\n%artist% - Artist name\n%album% - Album name\n%player% - Player name\n%y% - Year\n%m% - Month\n%d% - Day\n%h% - Hour\n%i% - Minute\n%s% - Second</string>

    <string name="cloudplayer">CloudPlayer</string>
    <string name="google_play_music">Google Play Music</string>
    <string name="spotify">Spotify</string>
    <string name="amazon">Amazon Music</string>
    <string name="sony">Xperia Music</string>
    <string name="aniuta">ANiUTa</string>
    <string name="aimp">AIMP</string>
    <string name="soundcloud">SoundCloud</string>
    <string name="apple">Apple Music</string>

    <string name="loading">Loading…</string>
    <string name="authorizing_twitter">Authorizing Twitter account</string>
    <string name="authorizing_mastodon">Authorizing Mastodon account</string>
    <string name="authorizing_misskey">Authorizing Misskey account</string>
    <string name="authorized">Authorized your account.</string>
    <string name="auth_failed">Failed to authorize your account.</string>

    <string name="auth_misskey">Auth</string>

    <string name="tweeted">Tweeted.</string>
    <string name="tooted">Tooted.</string>
    <string name="posted">Posted.</string>

    <string name="unknown">Unknown</string>
    <string name="error">Error</string>
</resources>
