<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference android:key="monitor_notifications"
                      android:title="@string/monitor_notifications"
                      android:defaultValue="true" />
    <Preference android:key="twitter_auth"
                android:title="@string/twitter_auth" />
    <EditTextPreference android:key="template"
                        android:title="@string/edit_template"
                        android:defaultValue="@string/template_default"
                        android:dialogMessage="@string/template_dialog" />
    <SwitchPreference android:key="with_cover"
                      android:title="@string/with_cover"
                      android:defaultValue="true" />
</PreferenceScreen>